data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_925.wast
;; 6. **Test Case**: Implement a loop where `call_indirect` resolves function types dynamically, branching to the wrong context if types mismatch.    - **Constraint Check**: Validate robust type checking for indirect calls within loops.    - **Improper Function Call or Return Handling**: Incorrect function type resolution causing execution anomalies.

(assert_invalid
  (module 
    (type $sig (func (param i32) (result i32)))
    (func (result i32)
      (loop 
        (call_indirect (type $sig) (i32.const 1) (i32.const 42))
      )
    )
  )
  "type mismatch"
)